--- a/package.json
+++ b/package.json
@@ -14,15 +14,18 @@
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "autoprefixer": "10.4.15",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "contentful-import": "^9.0.4",
     "date-fns": "2.30.0",
+    "lucide-react": "^0.323.0",
     "next": "latest",
     "postcss": "8.4.31",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss": "^3.3.3",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.1.6"
   }
 }
