--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "autoprefixer": "10.4.15",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "contentful": "^10.6.21",
     "contentful-import": "^9.0.4",
     "date-fns": "2.30.0",
     "lucide-react": "^0.323.0",
