--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "postcss": "8.4.31",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "schema-dts": "^1.1.2",
     "tailwind-merge": "^2.2.1",
     "tailwindcss": "^3.3.3",
     "tailwindcss-animate": "^1.0.7",
